--- a/styles/title-screen.css
+++ b/styles/title-screen.css
@@ -36,7 +36,8 @@ p {
   margin-top: 0rem;
 }
 
-a, a:visited {
+a,
+a:visited {
   color: #36daff;
   text-decoration: none;
 }
@@ -83,7 +84,12 @@ main {
   align-items: center;
   width: 100%;
   height: 100vh;
-  background-image: linear-gradient( 111.1deg,  #002846 -4.8%, #fe4242 82.7%, #ff8f3e 97.2% );
+  background-image: linear-gradient(
+    111.1deg,
+    #002846 -4.8%,
+    #fe4242 82.7%,
+    #ff8f3e 97.2%
+  );
 }
 
 section {
@@ -93,11 +99,15 @@ section {
   align-items: center;
   width: 100%;
   height: 100vh;
+  padding-bottom: 8rem;
   animation: fade_in 7s;
 }
 
 /* desktop */
 @media (min-width: 50rem) {
+  section {
+    padding-bottom: 0.5rem;
+  }
   h1 {
     font-size: 7em;
   }
