--- a/styles/title-screen.css
+++ b/styles/title-screen.css
@@ -22,6 +22,8 @@ h1 {
   text-shadow: 1px 1px #280000, 2px 2px #280000, 3px 3px #280000,
     4px 4px #280000, 5px 5px #280000, 6px 6px #280000, 7px 7px #280000,
     8px 8px #280000, 0px 0px 25px #ffffff;
+  /* transition */
+  transition: 0.5s;
   /* animation */
   animation-name: floating;
   animation-duration: 3s;
@@ -43,7 +45,7 @@ a:visited {
 }
 
 a:hover {
-  color: #ff1919;
+  color: #000000;
 }
 
 /* inputs */
